--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Carte</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="Js.js"></script>
 </head>
 <body> 
@@ -17,8 +17,8 @@
     </div>
 
     <span class="content">
-        <img class="right_arrow" src="/img/arrow.png">
-        <img class="left_arrow" src="/img/arrow.png">
+        <img class="right_arrow" src="img/arrow.png" alt="right arrow">
+        <img class="left_arrow" src="img/arrow.png" alt="left_arrow">
     </span>
 
 
