--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" />
         <h1> Titre de la carte</h1>
-        <p><script>prompt(Personne.data.desc)</script></p>
+        <p><script>prompt("UwU")</script></p>
 
 
     </div>
