--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="Js.js"></script>
+    <script type="text/javascript" src="JS.js"></script>
     
 </head>
 <body> 
@@ -13,7 +13,9 @@
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" />
         <h1> Titre de la carte</h1>
-        <p><script>"UwU"</script></p>
+        <p><script type="text/javascript">
+        document.write(Person.events[Pesonne.data.currentEvent].desc)
+      </script></p>
 
 
     </div>
