--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" />
         <h1> Titre de la carte</h1>
         <p><script type="text/javascript">
-        document.write(Person.events[Pesonne.data.currentEvent].desc)
+        document.write(Personne.events[Pesonne.data.currentEvent].desc)
       </script></p>
 
 
