--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
     <title>Carte</title>
     <meta charset="utf-8" />
-
-    <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="JS.js"></script>
-    
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body> 
     <div class="cadre">
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" />
         <h1> Titre de la carte</h1>
-        <p><script type="text/javascript">
-        document.write(Personne.events[Pesonne.data.currentEvent].desc)
-      </script></p>
+        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
 
 
     </div>
 
     <span class="content">
-        <img class="right_arrow" src="img/arrow.png" alt="right arrow">
-        <img class="left_arrow" src="img/arrow.png" alt="left_arrow">
+        <img class="left_arrow" src="img/arrow.png">
+        <img class="right_arrow" src="img/arrow.png">
+
+        <p class="left_question">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
+        <p class="right_question">je suis une deux iez nzefoinme question</p>
     </span>
 
 
