--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <input type="text" @keypress.stop.prevent="keyEvent($event)">
     <div class="cadre">
         
-    <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" />
+    <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
         <h1> Titre de la carte</h1>
-        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        <p id="desc"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
 
 
     </div>
 
     <span class="content">
-        <img class="left_arrow" src="img/arrow.png">
-        <img class="right_arrow" src="img/arrow.png">
+        <img class="left_arrow" src="img/arrow.png" >
+        <img class="right_arrow" src="img/arrow.png" >
 
-        <p class="left_question">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
-        <p class="right_question">je suis une deux iez nzefoinme question</p>
+        <p class="left_question" id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
+        <p class="right_question" id="droite">je suis une deux iez nzefoinme question</p>
     </span>
 
 
