--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/JS.js"></script>
 </head>
 <body>
-    <input type="text" @keypress.stop.prevent="keyEvent($event)">
+    <input type="text" onkeypress="keyEvent($event)">
     <div class="cadre">
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
