--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Carte</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="js/JS.js"></script>
+    <script type="text/javascript" src="js/JS.js" defer></script>
 </head>
 <body>
     <div class="cadre">
