--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>Carte</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="js/JS.js"></script>
 </head>
-<body>
+<body onload="">
     <div class="cadre">
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
@@ -29,3 +28,4 @@
 </body>
 
 </html>
+<script src="js/JS.js"></script>
