--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
 </head>
-<body onload="">
+<body>
     <div class="cadre">
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
@@ -24,8 +24,7 @@
     </span>
 
 
-
+<script src="js/JS.js"></script>
 </body>
 
 </html>
-<script src="js/JS.js"></script>
