--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/JS.js"></script>
 </head>
 <body>
-    <div class="cadre">
+    <div class="cadre" id="cadre">
         
     <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
         <h1> Titre de la carte</h1>
@@ -16,7 +16,7 @@
 
     </div>
 
-    <span class="content">
+    <span class="content" id="content">
         <img class="left_arrow" src="img/arrow.png" >
         <img class="right_arrow" src="img/arrow.png" >
 
