--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <span class="content" id="content">
         <img class="left_arrow" src="img/arrow.png" >
         <img class="right_arrow" src="img/arrow.png" >
+        <div id="left_question">
+        </div>
+        <dic class = "right_question" id="droite">
+        </div>
 
         <p class="left_question" id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
         <p class="right_question" id="droite">je suis une deux iez nzefoinme question</p>
