--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <img class="left_arrow" src="img/arrow.png" >
         <img class="right_arrow" src="img/arrow.png" >
         <div id="left_question">
+            <p id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
+
         </div>
         <dic class = "right_question" id="droite">
+            <p id="droite">je suis une deux iez nzefoinme question</p>
+
         </div>
 
-        <p class="left_question" id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
-        <p class="right_question" id="droite">je suis une deux iez nzefoinme question</p>
     </span>
 
 
