--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <span class="content" id="content">
         <img class="left_arrow" src="img/arrow.png" >
         <img class="right_arrow" src="img/arrow.png" >
-        <div id="left_question">
+        <div id="left_question" class="left_question">
             <p id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
 
         </div>
