--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <title>Carte</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <script type="text/javascript" src="js/JS.js"></script>
+    <script type="text/javascript" src="js/Depistage.js"></script>
 </head>
 <body>
-    <div class="cadre" id="cadre">
+    <div class="display_depistage" id="depistage">
         
-    <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
+    </div>
+
+    <div class="cadre" id="cadre">
+        <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
         <h1> Titre de la carte</h1>
         <div id="desc">
             <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
         </div>
-
     </div>
 
     <span class="content" id="content">
@@ -22,17 +25,10 @@
         <img class="right_arrow" src="img/arrow.png" >
         <div id="left_question" class="left_question">
             <p id="gauche">Bonjojzer que isfiisddfoiisdfois t un gros nul</p>
-
         </div>
-        <dic class = "right_question" id="droite">
+        <div class = "right_question" id="droite">
             <p id="droite">je suis une deux iez nzefoinme question</p>
-
         </div>
-
     </span>
-
-
-
 </body>
-
 </html>
