--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="cadre" id="cadre">
         <img src="https://www.shutterstock.com/image-vector/pictures-vector-icon-image-260nw-536173468.jpg" alt="carte" id="img"/>
         <h1> Titre de la carte</h1>
+        <hr class="barre">
         <div id="desc">
             <p> Lorem Ipsum isularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
         </div>
